fixed barchart text overflows

--- a/app/assets/stylesheets/data_table.css.less
+++ b/app/assets/stylesheets/data_table.css.less
@@ -189,15 +189,20 @@
           position: relative;
           float: none;
           overflow: hidden;
-          height: 15px; 
+          height: 15px;
+          background-color: #eeefef;
+          background-clip: content-box;
+          padding-right: 0px;
           & > div{
             position: absolute;
             height: 15px;
           }
+        /*
           & > .summary_bar_chart_bg{
             width: 100%;
             background-color: #eeefef;
           }
+        */
           & > .summary_bar_chart_percent{
             padding-left: 10px;
             top: 2px;
