--- a/app/assets/stylesheets/summary_data_charts.css.less
+++ b/app/assets/stylesheets/summary_data_charts.css.less
@@ -55,14 +55,19 @@
           float: none;
           overflow: hidden;
           height: 15px; 
+          background-color: #eeefef;
+          background-clip: content-box;
+          padding-right: 0px;
           & > div{
             position: absolute;
             height: 15px;
           }
+        /*
           & > .bar_item_chart_bg{
             width: 100%;
             background-color: #eeefef;
           }
+        */
           & > .bar_item_chart_percent{
             padding-left: 10px;
             top: 2px;
